# FunctionalDataStructures

./: .gitignore  FunctionalDataStructures.opam  README.md  dune  dune-project
Algos/Sorting/: Sorting.ml  dune
BenchmarkList/: BenchmarkList.ml  generate.py
DataStructures/Deque/: Deque.ml  dune
DataStructures/Deque/DequeDfl/: DequeDfl.ml  dune
DataStructures/Heap/: Heap.ml  dune
DataStructures/Heap/BenchmarkHeap/: BenchmarkHeap.ml  dune
DataStructures/Heap/ExplicitSize/: ExplicitSize.ml  dune
DataStructures/Queue/: Queue.ml  dune
DataStructures/RandomAccessList/: RandomAccessList.ml  dune
DataStructures/Set/: dune
DataStructures/SortingCollection/: SortingCollection.ml  dune
Deque/DequeDfl/: dune
Heap/: dune
Heap/BenchmarkHeap/: dune
Heap/LeftistHeap/: dune
Heap/LinearPairingHeap/: LinearPairingHeap.ml  dune
Heap/PairingHeap/: PairingHeap.ml
Heap/SplayHeap/: SplayHeap.ml  dune
Main/: Main.ml  dune
Maybe/: Maybe.ml
Ordered/: Ordered.ml
Queue/KMQueue/: dune
Set/: Set.ml
Set/AVL/: AVL.ml  dune
Set/CoSet/: CoSet.ml
Set/RedBlackTree/: RedBlackTree.ml
Set/Treaps/: Treaps.ml  dune
Set/UnbalancedTree/: UnbalancedTree.ml
Tree/: Tree.ml
Utils/BenchmarkList/: dune  inp.txt
Utils/FmtTest/: FmtTest.ml  dune
Utils/Maybe/: dune
Utils/NumberRepresentations/: NumberRepresentations.ml  dune
Utils/Ordered/: dune
Utils/Rand/: Rand.ml  dune
Utils/Stream/: Stream.ml  Stream.mli  dune
Utils/Tree/: dune
maybe/: dune  maybe.ml
queue/: dune  queue.ml
queue/kmqueue/: dune  kmheap.ml
stream/: dune  stream.ml
(+45 files in other folders)
