(lang dune 2.9)


(name WaveFunctionCollapse)

(generate_opam_files true)

(source
 (github wojpok/WaveFunctionCollapse))

(authors "Woj Pok")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://hackmd.io/tKDH0bNGTH-vkeymuzAsOw)


; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project