(lang dune 2.9)


(name FunctionalDataStructures)

(generate_opam_files true)

(source
 (github wojpok/FunctionalDataStructures))

(authors "Woj Pok")

(maintainers "Woj Pok")

(license LICENSE)

(documentation README.md)


; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project